fix canvas image too small on small screen

--- a/src/main/components/custom-comp/custom-container-components/SignaturePad.scss
+++ b/src/main/components/custom-comp/custom-container-components/SignaturePad.scss
@@ -4,6 +4,8 @@
     height: 100%;
     
     canvas {
+        height: 200px;
+        width: 400px;
         border: 1px solid #ced4da;
     }
 
